--- a/W251 Project Milestone #1.Rmd
+++ b/W251 Project Milestone #1.Rmd
@@ -46,10 +46,10 @@ output: pdf_document
 -   Discuss meeting tempo: \"checking in\" at the beginning of meetings versus \"just sticking to business\".
 
 #### Roles
+- How is your team going to keep track of progress? We will collaborate on agendas and take relevant minutes from the meetings.
+-  Who will be taking minutes - We will collaborate, creating agendas - Both of us will work on the agenda, and contacting the course facilitators with questions - Priya Bala (pbala307@berkeley.edu)?
 
--   How is your team going to keep track of progress? Who will be taking minutes, creating agendas, and contacting the course facilitators with questions?
-
--   We encourage you to discuss potential dates and times to meet with a course facilitator during Weeks 3-5. Decide on the best date and time for all.
+-   We encourage you to discuss potential dates and times to meet with a course facilitator during Weeks 3-5. Decide on the best date and time for all. Mondays - 11-4 pm, Wednesday - 1 - 3 pm
 
 #### Conflict Management
 
