Update PBHLTH W251 Milestone 2.Rmd
Commit - Priya

--- a/PBHLTH W251 Milestone 2.Rmd
+++ b/PBHLTH W251 Milestone 2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Milestone#2 PBHLTH W251"
-author: "Priya Bala"
+author: "Priya Bala and Mihir Pandya "
 date: "2023-10-02"
 output: html_document
 ---
