Test message here

--- a/PBHLTH W251 Milestone 2.Rmd
+++ b/PBHLTH W251 Milestone 2.Rmd
@@ -35,8 +35,7 @@ output: html_document
     head(ca_vax)
     head(sim_flu_CA)
     head(sim_flu_LA)
-
-
+    # test message here
     ```
 
     ```{r}
