--- a/Project_Milestone_3.Rmd
+++ b/Project_Milestone_3.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 #### **Data Cleaning: Milestone 3**
 
-The sim_flu_CA.csv file and sim_flu_LACounty.csv file together represent simulated morbidity for the entire state of California. While it\'s certainly possible for data from different sources to adhere to a format standard, one of the challenges of working with secondary data is that it often does not work out that way. Therefore to prepare each dataset (milestone #3) so that they can be combined into one, whole state, dataset you will need to do the following:
+The sim_flu_CA.csv file and sim_flu_LACounty.csv file together represent simulated morbidity for the entire state of California. While it's certainly possible for data from different sources to adhere to a format standard, one of the challenges of working with secondary data is that it often does not work out that way. Therefore to prepare each dataset (milestone #3) so that they can be combined into one, whole state, dataset you will need to do the following:
 
 -   Flu morbidity datasets (from CA and LA County)
 
@@ -74,8 +74,15 @@ Please turn in an html document created from an Rmd or Qmd with the following co
     -   Use of headers and sub headers to create an organized document
 
 ```{r}
-# Importing the CA dataset and the LA dataset. 
+# Adding all the packages that is necessary for the cleaning and importing done in this milestone. 
 library(readr)
+library(tidyverse)
+library(dplyr)
+```
+
+```{r}
+# Importing the CA dataset and the LA dataset. 
+
 sim_CA <- read_csv("./sim_flu_CA.csv")
 View(sim_CA)
 
@@ -86,4 +93,50 @@ View(sim_LA)
 
 ca_vax <- read_csv("./ca_vax_rates_quarter.csv")
 View(ca_vax)
+```
+
+Renaming the column names
+
+```{r}
+
+# Renaming the columns in the sim_LA dataset
+
+sim_LA <- rename_with(sim_LA,
+                      ~ tolower(
+                        gsub(" ",
+                             "",
+                             .x,
+                             fixed = TRUE)
+                      ))
+
+
+ca_vax <- rename_with(ca_vax,
+                      ~ tolower(
+                        gsub(" ",
+                             "_",
+                             .x,
+                             fixed = TRUE)
+                      ))
+
+# Renaming specific columns to match the column names in all the 3 datasets 
+
+sim_CA <- sim_CA %>% rename(county_name = county)
+sim_CA <- sim_CA %>% rename(population = pop)
+head(ca_vax)
+head(sim_CA)
+head(sim_LA)
+```
+
+We are first going to append sim_CA and sim_LA.
+
+```{r}
+View(sim_CA)
+View(sim_LA)
+
+colnames(sim_CA)
+colnames(sim_LA)
+
+sim_LA <- sim_LA %>% rename(new_recovered = recovered_new, current_infected = infected_current, )
+
+# Create county_name column for the LA dataset. 
 ```
