Testing push/pull

--- a/Project_Milestone_3.Rmd
+++ b/Project_Milestone_3.Rmd
@@ -139,4 +139,6 @@ colnames(sim_LA)
 sim_LA <- sim_LA %>% rename(new_recovered = recovered_new, current_infected = infected_current, )
 
 # Create county_name column for the LA dataset. 
+
+# sample test message
 ```
