--- a/Project_Milestone_3.Rmd
+++ b/Project_Milestone_3.Rmd
@@ -131,7 +131,9 @@ We are first going to append sim_CA and sim_LA.
 
 ```{r}
 
-sim_LA <- sim_LA %>% rename(new_recovered = recovered_new, current_infected = infected_current, new_infections = dx_new, count_susceptible = susceptible, cumulative_infected = infected_cumulative, cumulative_recovered = recovered_cumulative, new_severe = severe_new, cumulative_severe = severe_cumulative, time_int = dt_dx, age_cat = age_category, race_ethnicity = race_eth, report_date = dt_report)
+sim_LA <- sim_LA %>% rename(new_recovered = recovered_new, current_infected = infected_current, new_infections = dx_new, count_susceptible = susceptible, cumulative_infected = infected_cumulative, cumulative_recovered = recovered_cumulative, new_severe = severe_new, cumulative_severe = severe_cumulative, dt_diagnosis = dt_dx, age_cat = age_category, race_ethnicity = race_eth, report_date = dt_report)
+
+sim_CA <- sim_CA %>% rename(unique_id = time_int)
 
 # Create county_name column for the LA dataset. 
 sim_LA <- sim_LA %>% mutate(county_name = "Los Angeles County")
@@ -139,4 +141,17 @@ View(sim_LA)
 
 colnames(sim_CA)
 colnames(sim_LA)
+```
+
+Now that the column have been renamed to create a consistent dataset, we are adjusting the data types and formatting some of the columns to the appropriate data type.
+
+```{r}
+# For the LA dataset 
+sim_LA$dt_diagnosis <- as.Date(sim_LA$dt_diagnosis, format = "%d%b%Y")
+
+View(sim_LA)
+
+# Converting race_ethnicity using case_when 
+
+
 ```
