--- a/Mihir Project Milestone 3 Separate Work.Rmd
+++ b/Mihir Project Milestone 3 Separate Work.Rmd
@@ -4,26 +4,58 @@ output: html_document
 date: "2023-11-04"
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+Vaccination dataset 
+
+    -   Recode values to be consistent with morbidity datasets so they can be joined
+
+    -   Select vaccination time frame that fits best with morbidity data and subset appropriately
+
+    -   Select demographic strata(s) of interest
+
+    -   Create a vaccination rate metric and summarize to include only one row per strata of interest
+
+```{r}
+# Adding all the packages that is necessary for the cleaning and importing done in this milestone, using readr, tidyverse, dplyr
+
+library(readr)
+library(tidyverse)
+library(dplyr)
 ```
 
-## R Markdown
+```{r}
+# Importing the vaccination dataset
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+ca_vax <- read_csv("./ca_vax_rates_quarter.csv")
+View(ca_vax)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+# Recoding the column names to match morbidity datasets to ready them to join
+ca_vax_renamed <- rename_with(ca_vax,
+                      ~ tolower(
+                        gsub(" ",
+                             "_",
+                             .x,
+                             fixed = TRUE)
+                      ))
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+# Selecting a time frame that matches the morbidity dataset and subset
+
+ca_vax_time_frame <- subset(ca_vax_renamed, quarter == "2023-04-01")
+```
+
+```{r}
+# Selecting demographic strata of interest
+
+ca_demographics <- subset(ca_vax_time_frame, demographic_category == "Age Group")
+```
+
+```{r}
+# Creating vaccination rate metric
+
+ca_metric <- mutate(
+  ca_demographics,
+  "vaccination_rate" = (ca_demographics$cumulative_fully_vaccinated / ca_demographics$estimated_population) * 100)
+```
