--- a/Project_Milestone_3.Rmd
+++ b/Project_Milestone_3.Rmd
@@ -187,7 +187,9 @@ sim_CA_LA <- rbind(sim_CA_subset, sim_LA)
 head(sim_CA_LA)
 ```
 
-We are choosing the age category as a sociodemographic category and we are focusing on Alameda County.
+We are choosing the age category as a sociodemographic category and we are focusing on
+
+da County.
 
 ```{r}
 # Subsetting the combined dataset to only include age and Alameda County
@@ -211,7 +213,7 @@ str(sim_CA_LA_age_subset)
 
 ```{r}
 
-aggregated_df <- sim_CA_LA_age_subset %>%
+sim_Cali_aggregated <- sim_CA_LA_age_subset %>%
   drop_na(count_susceptible, current_infected, cumulative_infected, cumulative_recovered, cumulative_severe, population) %>%
   group_by(county_name, age_cat) %>%
   summarise(
@@ -226,7 +228,7 @@ aggregated_df <- sim_CA_LA_age_subset %>%
     population = last(population)
   )
 
-print(aggregated_df)
+print(sim_Cali_aggregated)
 ```
 
 Cleaning the California Vaccination dataset
@@ -263,7 +265,7 @@ ca_metric <- mutate(
   "vaccination_rate" = 
     (ca_demographics$cumulative_fully_vaccinated / ca_demographics$estimated_population) * 100)
 
-ca_metric <- ca_metric %>%
+ca_demographics <- ca_demographics %>%
   rename("age_cat" = "demographic_value")
 ```
 
@@ -276,12 +278,9 @@ View(ca_metric)
 ```{r}
 # We are merging the subsetted sim_CA_LA_age_subset and ca_metric dataset. 
 
-merged_final <- merge(sim_CA_LA_age_subset, ca_metric, by = "county_name")
-View(merged_final)
-
 # Remaining modifications to enable merge
 
-ca_vax_county <- subset(ca_metric, county_name == "Alameda")
+ca_vax_county <- subset(ca_demographics, county_name == "Alameda")
 
 ca_vax_county$age_cat = case_when(
     ca_vax_county$age_cat == "Under 5" ~ "0-17",
@@ -291,4 +290,86 @@ ca_vax_county$age_cat = case_when(
     ca_vax_county$age_cat == "50-64" ~ "50-64",
     ca_vax_county$age_cat == "65+" ~ "65+")
 
+View(ca_vax_county)
+
+# merged_final <- merge(sim_CA_LA_age_subset, ca_metric, by = "county_name")
+# View(merged_final)
+```
+
+```{r}
+
+subset_data_age_17 <- ca_vax_county %>%
+  filter(age_cat == "0-17")
+
+View(subset_data_age_17)
+
+ca_vax_county_age_no17 <- ca_vax_county %>%
+  filter(age_cat != "0-17")
+
+View(ca_vax_county_age_no17)
+
+ca_vax_county_age_no17 <- ca_vax_county_age_no17[,-c(2,3)]
+```
+
+```{r}
+# Assuming your dataset is named ca_vax_county, you can use the following code to aggregate the data into a single row.
+aggregated_data_17 <- subset_data_age_17 %>%
+  group_by(age_cat) %>%
+  summarise(
+    estimated_population = sum(estimated_population),
+    total_partial_vaccinated = sum(total_partial_vaccinated),
+    cumulative_fully_vaccinated = sum(cumulative_fully_vaccinated),
+    cumulative_at_least_one_dose = sum(cumulative_at_least_one_dose),
+    cumulative_unvaccinated = sum(cumulative_unvaccinated),
+    cumulative_up_to_date_vax = sum(cumulative_up_to_date_vax),
+    county_name = county_name,
+    dt_admin = dt_admin,
+    suppress_data = suppress_data,
+    quarter = quarter
+  ) %>%
+  distinct()
+
+View(aggregated_data_17)
+
+
+order <- c("county_name", "age_cat", "estimated_population", "dt_admin", "total_partial_vaccinated", "cumulative_fully_vaccinated", "cumulative_at_least_one_dose", "cumulative_unvaccinated", "suppress_data", "cumulative_up_to_date_vax", "quarter")
+
+# Reorder the columns of the first dataset
+aggregated_data_17 <- aggregated_data_17[, order]
+
+View(aggregated_data_17)
+
+ca_vax_county_final <- rbind(aggregated_data_17, ca_vax_county_age_no17) 
+print(ca_vax_county_final)
+
+```
+
+We are calculating the vaccination rate for the California vaccination dataset.
+
+```{r}
+
+ca_vax_county_final <- ca_vax_county_final %>%
+  mutate(vaccination_rate = (cumulative_fully_vaccinated / estimated_population) * 100)
+View(ca_vax_county_final)
+
+# The observations in the 
+```
+
+Now that we have created an aggregated ca_vax dataset that is only for the Alameda county in the April 1st 2023 quarter with age categories as the chosen sociodemographic characteristic, we can combine the California vaccine dataset with the simulated dataset.
+
+```{r}
+# Combining the two final datasets to create one final dataset. 
+
+# The ca_vax_county_final dataset has its county_name variables as Alameda rather than Alameda County, thus we are adding additional cleaning to make the merge of the combined datasets easier. 
+
+ca_vax_county_final <- ca_vax_county_final %>% mutate(county_name = case_when(
+    county_name == "Alameda" ~ "Alameda County"))
+
+head(sim_Cali_aggregated)
+head(ca_vax_county_final)
+
+# Merging the two final datasets. 
+
+merged_final_alameda <- merge(sim_Cali_aggregated, ca_vax_county_final, by = "age_cat", all = TRUE)
+View(merged_final_alameda)
 ```
